@@ -40,22 +40,22 @@
  * create a new face with that color.
  */
 typedef struct new_face_struct {
-    uint16	number;		/**< This is the image id.  It should be the
-                          * same value as its position in the array */
-    const char	*name;  /**< Face name, as used by archetypes and such. */
-    uint8	visibility;
-    uint8	magicmap;	/**< Color to show this in magic map */
+    uint16      number;      /**< This is the image id.  It should be the
+                              * same value as its position in the array */
+    uint8       visibility;
+    uint8       magicmap;    /**< Color to show this in magic map */
+    const char  *name;       /**< Face name, as used by archetypes and such. */
 } New_Face;
 
 /**
  * This represents one animation. It points to different faces.
  */
-typedef struct {
+typedef struct animations_struct {
     const char *name;       /**< Name of the animation sequence */
     uint8 num_animations;   /**< How many different faces to animate */
     uint8 facings;          /**< How many facings (1,2,4,8) */
-    Fontindex *faces;       /**< The different animations */
     uint16  num;            /**< Where we are in the array */
+    Fontindex *faces;       /**< The different animations */
 } Animations;
 
 #endif /* FACE_H */
